Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3192

.NET Binding for Messaging classes are missing intrinsic copy contructors

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.10
    • .NET Client
    • None

    Description

      Apparent copy constructors for each class are defined using 'T(const T ^)' but these are ordinary contructors.
      Intrinsic copy constructors use 'T(const T %)'.

      Attachments

        Activity

          People

            chug Charles E. Rolke
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: