QPID-3192 .NET Binding for Messaging classes are missing intrinsic copy constructors.

The existing 'T(const T ^)' constructor is useful for C# code but fails for Cpp/clr.
This commit adds the 'T(const T %)' intrinsic copy constructor for Cpp/clr.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1089995 13f79535-47bb-0310-9956-ffa450edef68