cpp/bindings/qpid/dotnet/src/Address.h
@@ -64,6 +64,7 @@ namespace Messaging {
 
         // copy constructor
         Address(const Address ^ address);
+        Address(const Address % address);
 
         // unmanaged clone
         Address(const ::qpid::messaging::Address & addrp);
