cpp/bindings/qpid/dotnet/src/Sender.h
@@ -62,6 +62,7 @@ namespace Messaging {
         
         // copy constructor
         Sender(const Sender ^ sender);
+        Sender(const Sender % sender);
 
         ~Sender();
         !Sender();
