qpid/cpp/bindings/qpid/dotnet/src/Message.cpp
@@ -235,7 +235,7 @@ namespace Messaging {
         }
     }
 
-    // Copy constructor
+    // Copy constructor look-alike (C#)
     Message::Message(const Message ^ message)
     {
         System::Exception ^ newException = nullptr;
@@ -257,7 +257,29 @@ namespace Messaging {
 		}
     }
 
-	// Property
+    // Copy constructor implicitly dereferenced (C++)
+    Message::Message(const Message % message)
+    {
+        System::Exception ^ newException = nullptr;
+
+        try 
+		{
+            messagep = new ::qpid::messaging::Message(
+                        *(const_cast<Message %>(message).NativeMessage));
+        } 
+        catch (const ::qpid::types::Exception & error) 
+		{
+            String ^ errmsg = gcnew String(error.what());
+            newException    = gcnew QpidException(errmsg);
+        }
+
+		if (newException != nullptr) 
+		{
+	        throw newException;
+		}
+    }
+
+    // Property
     void Message::SetProperty(System::String ^ name, System::Object ^ value)
     {
         System::Exception ^ newException = nullptr;
